add section for jar signer